--- a/ch2/express_app/views/hello.ejs
+++ b/ch2/express_app/views/hello.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title ></title>
-    <link rel="stylesheet" href="/ch2/express_app/public/stylesheets/style.css" />
+    <title><%= title %></title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1><%= title ></h1>
-    <p><%= message ></p>
+    <h1><%= title %></h1>
+    <p><%= message %></p>
   </body>
 </html>
