--- a/ch2/express_app/views/header.ejs
+++ b/ch2/express_app/views/header.ejs
@@ -5,5 +5,5 @@
     <title><%= title %></title>
   </head>
   <body class="container">
-    <h1 class="display-2 my-2 text-primary"><%= title ></h1>
+    <h1 class="display-2 my-2 text-primary"><%= title %></h1>
     <hr class="my-2 p-0" />
