--- a/ch2/express_app/views/hello.ejs
+++ b/ch2/express_app/views/hello.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
-  </head>
-  <body class="container">
-    <h1 class="display-4"><%= title %></h1>
+<%- include('header', title) %>
     <p><%= message %></p>
     <table class="table table-striped">
       <thead>
@@ -23,5 +16,4 @@
         <% } %>
       </tbody>
     </table>
-  </body>
-</html>
+<%- include('footer') %>
