--- a/ch2/express_app/views/index.ejs
+++ b/ch2/express_app/views/index.ejs
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
-  <body>
-    <h1><%= title %></h1>
+<%- include("header", title) %>
     <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include("footer") %>
