--- a/ch2/express_app/views/hello.ejs
+++ b/ch2/express_app/views/hello.ejs
@@ -1,19 +1,14 @@
 <%- include('header', title) %>
-    <p><%= message %></p>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Mail</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for(var item of db){ %>
-        <tr>
-          <td><%= item.name %></td>
-          <td><%= item.mail %></td>
-        </tr>
-        <% } %>
-      </tbody>
-    </table>
+    <p class="my-2"><%= message %></p>
+    <form action="/hello" method="post">
+        <div class="mb-3">
+            <label for="id" class="form-label">ID</label>
+            <input type="text" name="id" id="id" class="form-control" value="<%= id %>">
+        </div>
+        <div class="mb-3">
+            <label for="pass" class="form-label">Password</label>
+            <input type="password" class="form-control" id="pass" name="pass" value="<%= pass %>">
+        </div>
+        <button type="submit" class="btn btn-primary">送信</button>
+    </form>
 <%- include('footer') %>
