--- a/ch2/express_app/views/hello.ejs
+++ b/ch2/express_app/views/hello.ejs
@@ -1,30 +1,26 @@
 <%- include('header', title) %>
-<script>
-  async function ajax() {
-    const data = {
-      id: document.querySelector("#id").value,
-      pass: document.querySelector("#pass").value,
-    };
-    const resp = await fetch("/hello/ajax", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify(data),
-    });
-    const result = await resp.json();
-    document.querySelector("#msg").textContent = result.message;
-  }
-</script>
-<p class="my-2" id="msg"><%= message %></p>
-<div class="mb-3">
-  <label for="id" class="form-label">ID</label>
-  <input type="text" name="id" id="id" class="form-control" value="<%= id %>" />
-</div>
-<div class="mb-3">
-  <label for="pass" class="form-label">Password</label>
-  <input type="password" class="form-control" id="pass" name="pass" value="<%= pass %>" />
-</div>
-<button class="btn btn-primary" onclick="ajax()">送信</button>
 
+<p class="my-2" id="msg"><%= message %></p>
+<form action="/hello" method="post">
+  <div class="mb-3">
+    <label for="comment" class="form-label">Message</label>
+    <input type="text" name="comment" id="comment" class="form-control" />
+  </div>
+  <button class="btn btn-primary" type="submit">送信</button>
+</form>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Comment</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% for(item of comments){ %>
+    <tr>
+      <td><%= item %></td>
+    </tr>
+    <% } %>
+  </tbody>
+</table>
 <%- include('footer') %>
